--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
-   <plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-war-plugin</artifactId>
-       <version>3.3.1</version>          
-      </plugin>
+      <plugins>
+             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-war-plugin</artifactId>
+               <version>3.3.1</version>          
+               </plugin>
       <scope>test</scope>
     </dependency>
   </dependencies>
